--- a/participant-export/buildspec.yml
+++ b/participant-export/buildspec.yml
@@ -28,4 +28,4 @@ phases:
       - echo Writing image definitions file...
       - printf '[{"name":"participant-export","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 artifacts:
-    files: imagedefinitions.json
+    files: participant-export/imagedefinitions.json
